--- a/src/Mainpage.css
+++ b/src/Mainpage.css
@@ -1,20 +1,36 @@
+.mainpage-container-blur{
+     position: fixed;
+  
+  width: 100vw;
+  height: 100vh;
+  background: inherit;/* Match the background color of your page */
+  filter: blur(5px); /* Adjust the blur amount as needed */
+  z-index: 1;
+}
+.mainpage-container button{
+    background-color: transparent;
+   color: rgb(64, 105, 194)
+} 
+.mainpage-container button:hover{
+    color: rgb(13, 94, 161);
+    border-bottom: 1px solid rgb(13, 94, 161);
+} 
 .page-header_container{
 display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
 }
 
+/*Section 1*/
 #section01{
-position: relative;
-display: flex;
-flex-direction: column;
-justify-content: space-evenly;
-transform: translate(0, -15%);
-}
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    transform: translate(0, -15%);
+    
+    }
 
-.tab-container{
-    margin: 0px;
-}
 .tab-container button{
     background-color: transparent;
     color: black;
@@ -22,8 +38,13 @@ transform: translate(0, -15%);
     min-width: auto ;
     max-height: 45px;
     font-size: 1.3rem;
-    font-weight: 600;
+    
     padding: 15px;
+    
+}
+.tab-container button:hover{
+    background-color: transparent;
+   
 }
 button.active {
     color: black; /* Change to your desired color */
@@ -32,49 +53,49 @@ button.active {
   }
 @media screen and (max-width: 505px) {
     .tab-container button{
-font-size: 0.85rem;
+font-size: 0.9rem;
 padding: 10px;
 min-height: 25px;
 font-weight: 600;
 margin: 0;
     }
+    
 }
-.tab-container ul{
+.tab-container {
     list-style-type: none;
     position: fixed;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     background-color: white;
-    top: -50px;
+    font-family: 'Lato', sans-serif;
     position: relative;
     z-index: 2;
     margin: 0;
+    padding: 0;
 }
 .tab-container li{
     border-radius: 10px;
     padding: 5px;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 700;
-    
 }
 .tab-container a{
 text-decoration-line: none;
 color: white;
 }
 .hero-Image{
-background-image:  url("../public/section01Image.jpg");
- position: relative;
+    background-image:  url("/section01Image.jpg");
+    position: relative;
     top: 0;
     left: 0;
-    
-   object-fit: cover;
+    object-fit: cover;
     pointer-events: none;
     background-position: center ;
     background-size: cover;
-    height: 700px;
-}
+        height: 700px;
+    }
 .hero-Text{
 text-align: center;
 position: absolute;
@@ -83,6 +104,13 @@ left: 50%;
 transform: translate(-50%, -50%);
 color: white;
 }
+.hero-Text p{
+    text-align: center;
+  
+    font-size: 1.5rem;
+    
+    color: white;
+    }
 .hero-Text h1{
 font-size: 3rem;
 text-align: center;
@@ -120,24 +148,21 @@ justify-content: space-evenly;
 
 }
 .tailormade-container2 button{
-    background-color: rgb(232, 89, 73);
+   
     width: 120px;
     height: 50px;
-    border-radius: 40px;
-    border: none;
-    color: white;
+/*     border-radius: 40px;
+ */    border: none;
+    
    
 }
 .text-container-tailormade-mainpage{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: system-ui;
     max-width: 300px;
      padding: 5px;
-     
 }
-
 
 
 /* ************ Section3 Food ************* */
@@ -150,6 +175,7 @@ display: flex;
 flex-direction: row;
 justify-content: center;
 z-index: 0;
+height: 700px;
 }
 .porto-imageFood{
 border: 1px solid black;
@@ -169,18 +195,18 @@ flex-direction: column;
 justify-content: space-evenly;
 }
 .food-container button{
-    background-color: rgb(232, 89, 73);
+    
     width: 120px;
     height: 50px;
-    border-radius: 40px;
+    
     border: none;
-    color: white;   
+   
 }
 .text-container-food{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: system-ui;
+   
     max-width: 90%;
     padding: 5px;
 }
@@ -249,12 +275,12 @@ height: 300px;
         
 }
 .activities-container button{
-    background-color: rgb(232, 89, 73);
+    
     width: 120px;
     height: 50px;
-    border-radius: 40px;
+  
     border: none;
-    color: white;
+   
 }
 
 
@@ -262,7 +288,7 @@ height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: system-ui;
+   
     max-width: 300px;
     padding: 5px;
     color: white;
@@ -282,41 +308,26 @@ height: 300px;
 }
 /* ************ Section5 TOURS ************* */
 #section05{
-    position: relative;
-  background-color: white;
-  padding: 20px; 
-  min-height: 500px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  z-index: 0;
-}
-.porto-imageTours{
-    border: 1px solid black;
-border-radius: 30px;
-max-width: 250px;
-height: 300px;
-
-
-}
-.porto-imageTours:hover{
-  
-    max-width: 250px;
-    transform: scale(1.1);
-    transition: 0.5s;
-height: 300px;
-    }
-
-.tours-container{
-display: flex;
-flex-direction: column;
-justify-content: space-evenly;
-align-items: center;
-
+position: relative;
+background-color: white;
+padding: 20px; 
+min-height: 400px;
 height: auto;
 border-radius: 50px;
-width: 70%;
+max-width: 98vw;
+z-index: 0;
+display: flex;
+flex-direction: column;
+
 }
+ .tours-container{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+
+} 
+
 @media  screen and (max-width: 850px) {
     .tours-container{
         display: flex;
@@ -330,31 +341,47 @@ width: 70%;
         }
     
 }
+
+.porto-imageTours{
+    border: 1px solid black;
+border-radius: 30px;
+max-width: 250px;
+height: 300px;
+}
+.porto-imageTours:hover{
+  
+    max-width: 250px;
+    transform: scale(1.1);
+    transition: 0.5s;
+height: 300px;
+    }
+
+
 .tours-container button{
-    background-color: rgb(232, 89, 73);
+    
     width: 120px;
     height: 50px;
-    border-radius: 40px;
+   
     border: none;
-    color: white;
+    
    
 }
 .text-container-tours{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    font-family: system-ui;
-    max-width: 300px;
+    align-items: center;
+    
      padding: 5px;
      color: black;
 }
 .text-container-tours h1{
     
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 .text-container-tours p{
      
-     font-size: 1rem;
+     font-size: 1.1rem;
 } 
 
 /* Transition section */
@@ -371,4 +398,54 @@ padding: 15px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+/*Section Form Tailormade Container*/
+.section-TailormadeForm{
+min-height: 600px;
+padding: 90px;
+}
+.section-TailormadeForm h1{
+  display: flex;
+  justify-content: center;
+    }
+
+.formTailormade-container{
+    display: flex;
+    justify-content: center;
+    padding: 10px; 
+}
+.formTailormade-container-form{
+    display: flex;
+    flex-direction: column;
+}
+.formTailormade-container input{
+   border: 1px solid black;
+   border-radius: 15px;
+   height: 35px;
+   padding: 5px;
+}
+.formTailormade-container textarea{
+    border: 1px solid black;
+    border-radius: 5px;
+    min-height: 85px;
+ }
+.formTailormade-container button{
+    background-color: rgb(187, 184, 184);
+    width: 30vw;
+    border: 1px solid black;
+    border-radius: 15px;
+height: 30px;
+margin: 5px;
+color: black;
+}
+.formTailormade-container button:hover{
+    background-color: rgb(200, 198, 198);
+    border: 1px solid black;
+    color: black;
+}
+.formTailormade-container label{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
 }
