--- a/src/SlickCarouselTours.css
+++ b/src/SlickCarouselTours.css
@@ -1,17 +1,25 @@
 .slick-carousel-tours-mainpage-container {
-    width: 95vw;
+    width: 85vw;
     
 }
 
 .slick-arrow.slick-prev {
     background-color: transparent;
     z-index: 1;
+    max-width:30px;
+    border-bottom: none;
+}
+.slick-arrow.slick-prev:hover {
+    border-bottom: none;
 }
 
 .slick-arrow.slick-next {
     background-color: transparent;
+    max-width:30px;
 }
-
+.slick-arrow.slick-next:hover {
+    border-bottom: none;
+}
 .slick-arrow.slick-next::before {
     font-size: 30px;
     color: grey;
@@ -22,21 +30,27 @@
     color: grey;
 }
 .image-text-slick-container {
-    width: 100%;
-    overflow: hidden; /* Ensure consistent height even if content overflows */
+   
+    overflow: hidden; 
 }
 .image-text-slick-container2 {
     width: 100%;
-    height: 200px;
-    overflow: hidden; /* Ensure consistent height even if content overflows */
+    height: 300px;
+    overflow: hidden; 
 }
 .image-text-slick-container2 img {
     width: 100% ;
     height: 100%  ;
-    object-fit: cover; /* Maintain image aspect ratio and cover the container */
+    object-fit: cover; 
 
 
 }
+.card{
+    max-height: 500px;
+}
 .card:hover{
     box-shadow: 0px 1px 5px 1px rgb(184, 182, 182);
+}
+.slick-track{
+    width: 80vw;
 }
