--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,11 @@
 }
 html,
 body {
-    font-family: sans-serif;
-    
-    min-height: 100vh;
-    max-width: 100%; 
-    
+    font-family: 'Lato', serif;
+}
+h1, h2, h3, h4{
+    font-family: Georgia;
+}
+p{
+    font-family: 'Lato', serif;
 }
