favorites not fully working, change images

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -71,7 +71,7 @@ min-height: 400px;
     
   }
   .whatsapp-icon:hover {
-    background-color: #0d5b1f; /* Darker green on hover */
+    background-color: #0d5b1f; 
     color: white
   }
   
