--- a/src/Mainpage.css
+++ b/src/Mainpage.css
@@ -1,11 +1,15 @@
 .mainpage-container-blur{
-     position: fixed;
-  
+position: fixed;
   width: 100vw;
   height: 100vh;
-  background: inherit;/* Match the background color of your page */
-  filter: blur(5px); /* Adjust the blur amount as needed */
+  background: inherit;
+  filter: blur(5px);
   z-index: 1;
+}
+.mainpage-container{
+   
+    align-items: center;
+   
 }
 .mainpage-container button{
     background-color: transparent;
@@ -160,7 +164,7 @@ justify-content: space-evenly;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 300px;
+    max-width: 500px;
      padding: 5px;
 }
 
@@ -252,35 +256,50 @@ height: 300px;
 }
 .activities-container{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgb(18, 15, 37);
+    background-color: rgb(19, 19, 61);
     height: 500px;
     border-radius: 50px;
-    width: 70%;
+    width: 1000px;
     }
     
-@media  screen and (max-width: 896px) {
+@media  screen and (max-width: 900px) {
     .activities-container{
         display: flex;
         flex-wrap: column;
         justify-content: space-evenly;
-        background-color: rgb(18, 15, 37);
+        background-color: rgb(19, 19, 61);
         height: auto;
         border-radius: 50px;
-        min-width: 250px;
+        width: 3500px;
         padding: 10px;
         }
         
 }
-.activities-container button{
+@media  screen and (max-width: 700px) {
+    .activities-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        background-color: rgb(19, 19, 61);
+        height: 600px;
+        border-radius: 50px;
+        width: 350px;
+        padding: 10px;
+        }
+        
+}
+.carousel-container{
+    height: auto;
+    max-width: 250px; 
     
+}
+.activities-container button{
     width: 120px;
     height: 50px;
-  
     border: none;
-   
 }
 
 
@@ -301,11 +320,7 @@ height: 300px;
      
      font-size: 1rem;
 }
-.carousel-container{
-    height: auto;
-    max-width: 300px; 
-    padding: 10px;
-}
+
 /* ************ Section5 TOURS ************* */
 #section05{
 position: relative;
@@ -314,7 +329,7 @@ padding: 20px;
 min-height: 400px;
 height: auto;
 border-radius: 50px;
-max-width: 98vw;
+max-width: 100vw;
 z-index: 0;
 display: flex;
 flex-direction: column;
@@ -387,11 +402,12 @@ height: 300px;
 /* Transition section */
 .transition-section{
 background-color: rgb(204, 228, 250);
-height:300px;
+height:400px;
 display: flex;
 justify-content: center;
 align-items: center;
 padding: 15px;
+
 }
 .transition-section-container{
     display: flex;
@@ -402,12 +418,22 @@ padding: 15px;
 /*Section Form Tailormade Container*/
 .section-TailormadeForm{
 min-height: 600px;
-padding: 90px;
+max-width: 100vw;
+padding: 30px;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+background-color: rgb(251, 245, 238);
 }
-.section-TailormadeForm h1{
-  display: flex;
-  justify-content: center;
-    }
+.tailormade-form-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 50vw;
+}
+
 
 .formTailormade-container{
     display: flex;
@@ -444,6 +470,11 @@ color: black;
     color: black;
 }
 .formTailormade-container label{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.tailormade-form-text-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
