--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -1,16 +1,35 @@
 .activities-image1{
-    width: 100%;
-    height: 300px;
+    width: 350px; 
+    height: 350px;
     border-radius: 30px;
 }
 .activities-image2{
-    max-width: 100%;
-    height: 300px;
+    width: 350px; 
+    height: 350px;;
     border-radius: 30px;
 }
 
 .activities-image3{
-width: 100%;
-height: 300px;
+    width: 350px; 
+height: 350px;
 border-radius: 30px;
+}
+@media  screen and (max-width: 700px) {
+    .activities-image1{
+        width: 250px; 
+        height: 250px;
+        border-radius: 30px;
+    }
+    .activities-image2{
+        width: 250px; 
+        height: 250px;
+        border-radius: 30px;
+    }
+    
+    .activities-image3{
+    width: 250px; 
+    height: 250px;
+    border-radius: 30px;
+    }
+        
 }
