--- a/src/Mainpage.css
+++ b/src/Mainpage.css
@@ -89,17 +89,18 @@ margin: 0;
 text-decoration-line: none;
 color: white;
 }
-.hero-Image{
-    background-image:  url("/section01Image.jpg");
+.hero-Image {
     position: relative;
-    top: 0;
-    left: 0;
+    height: 700px;
+    overflow: hidden; /* Ensure the image doesn't overflow its container */
+}
+
+.hero-Image img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     pointer-events: none;
-    background-position: center ;
-    background-size: cover;
-        height: 700px;
-    }
+}
 .hero-Text{
 text-align: center;
 position: absolute;
@@ -293,7 +294,7 @@ height: 300px;
 }
 .carousel-container{
     height: auto;
-    max-width: 250px; 
+    max-width: 350px; 
     
 }
 .activities-container button{
