need favorites and minor styling improvements

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -60,7 +60,7 @@ min-height: 400px;
   }
   .whatsapp-icon {
     background-color: white;
-   
+   list-style-type: none;
    padding: 8px;
     border-radius: 15px;
     border-style: solid;
