--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    
+  
 background-color: rgb(19, 19, 61);
 min-height: 400px;
 }
@@ -52,6 +52,15 @@ min-height: 400px;
     color: grey;
     
   }
+  @media screen and (max-width: 400px ){
+    .footer-wo-Bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ 
+  }
+  }
+  
   .footer-bottom{
     color: white;
     width: 50%;
@@ -74,4 +83,13 @@ min-height: 400px;
     background-color: #0d5b1f; 
     color: white
   }
-  
+  @media screen and (max-width: 323px) {
+    .whatsapp-icon{
+      display: flex;
+      flex-direction: column;
+      height: 50px;
+      width: 135px;
+      margin: 0;
+      font-size: 0.8rem
+    }
+  }
