--- a/src/Mainpage.css
+++ b/src/Mainpage.css
@@ -104,7 +104,7 @@ color: white;
 .hero-Text{
 text-align: center;
 position: absolute;
-top: 50%;
+top: 20%;
 left: 50%;
 transform: translate(-50%, -50%);
 color: white;
@@ -119,6 +119,7 @@ color: white;
 .hero-Text h1{
 font-size: 3rem;
 text-align: center;
+padding: 50px;
 }
 
 /* ************ Section2 Tailor Made ************* */
@@ -175,12 +176,13 @@ justify-content: space-evenly;
 position: relative;
 background-color: white;
 padding: 20px; 
-min-height: 500px;
+min-height: 800px;
 display: flex;
 flex-direction: row;
 justify-content: center;
 z-index: 0;
 height: 700px;
+
 }
 .porto-imageFood{
 border: 1px solid black;
@@ -193,12 +195,26 @@ max-width: 250px;
 transform: scale(1.1);
 transition: 0.5s;
 height: 300px;
+
 }
 .food-container{
 display: flex;
 flex-direction: column;
 justify-content: space-evenly;
-}
+align-items: center;
+}   
+    @media  screen and (max-width: 850px) {
+        .food-container{
+            display: flex;
+            flex-wrap: column;
+            justify-content: space-evenly;
+            height: auto;
+            border-radius: 50px;
+            min-width: 250px;
+            padding: 10px;
+            }
+        
+    }
 .food-container button{
     width: 120px;
     height: 50px;
@@ -268,25 +284,8 @@ height: 300px;
         max-width: 350px; 
         
     }
-@media  screen and (max-width: 900px) {
-    .activities-container{
-        display: flex;
-        flex-wrap: column;
-        justify-content: space-evenly;
-        background-color: rgb(19, 19, 61);
-        height: auto;
-        border-radius: 50px;
-        width: 350px;
-        padding: 10px;
-        }
-        .carousel-container{
-            height: auto;
-            max-width: 350px; 
-            
-        }
-        
-}
-@media  screen and (max-width: 700px) {
+
+@media  screen and (max-width: 892px) {
     .activities-container{
         display: flex;
         flex-direction: column;
@@ -294,7 +293,7 @@ height: 300px;
         background-color: rgb(19, 19, 61);
         height: 600px;
         border-radius: 50px;
-        width: 350px;
+        max-width: 350px;
         padding: 10px;
         }
         .carousel-container{
@@ -360,6 +359,19 @@ align-items: center;
         height: auto;
         border-radius: 50px;
         min-width: 250px;
+        padding: 10px;
+        }
+    
+}
+@media  screen and (max-width: 400px) {
+    .tours-container{
+        display: flex;
+        flex-wrap: column;
+        justify-content: space-evenly;
+       align-items: flex-start;
+        height: auto;
+        border-radius: 50px;
+        max-width: 100vw;
         padding: 10px;
         }
     
